--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_redux",
+  "name": "react_boiler",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,10 +13,7 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "uuid": "^8.1.0"
+    "react-scripts": "^3.4.1"
   },
   "browserslist": {
     "production": [
