--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "homepage": "https://whoadarshpandya.github.io/react_context",
   "scripts": {
     "start": "set PORT=4400 && react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "keywords": [],
   "author": "Adarsh Pandya",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "uuid": "^8.1.0"
   },
   "browserslist": {
     "production": [
